# rust-simple-pos

./: .env  .env.example  .gitignore  Cargo.toml  run.sh  sqlx-data.json
kipko-core/: Cargo.toml
kipko-core/src/: accounting.rs  lib.rs  models.rs  money.rs  tax.rs
kipko-server/: Cargo.toml
kipko-server/src/: database.rs  handlers.rs  main.rs  models.rs
kipko-server/src/handlers/: accounting.rs  customers.rs  inventory.rs  menu.rs  order_items.rs  orders.rs  payments.rs  registry.rs  reservations.rs  staff.rs  tables.rs  tax.rs
kipko-ui/: Cargo.toml  dioxus-demo.html  index.html  preview.html  simple-demo.html
kipko-ui/src/: main.rs  main_simple.rs
kipko-ui/src/components/: common.rs  forms.rs  layout.rs  mod.rs
kipko-ui/src/pages/: customers.rs  discounts.rs  floorplan.rs  inventory.rs  kitchen.rs  login.rs  menu.rs  mod.rs  orders.rs  registry.rs  reports.rs  reservations.rs  staff.rs
kipko-ui/src/services/: api.rs  mod.rs
kipko-ui/src/utils/: mod.rs  qr.rs
migrations/: 001_create_initial_schema.sql  002_insert_sample_data.sql  003_add_inventory_and_registry.sql  004_add_order_items_and_payments.sql
