[workspace]
resolver = "3"
members = [
    "kipko-core",
    "kipko-server", 
    "kipko-ui"
]

[workspace.dependencies]
# Core dependencies
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }

# Server dependencies  
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# UI dependencies
dioxus = "0.5"
dioxus-desktop = "0.5"

# Testing dependencies
proptest = "1.4"
