[package]
name = "kipko-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core workspace dependencies
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Database dependencies
sqlx = { workspace = true }

# Server dependencies  
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net"] }

# Additional server dependencies
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"

# Workspace dependencies
kipko-core = { path = "../kipko-core", features = ["db"] }
