[package]
name = "kipko-ui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kipko-ui-simple"
path = "src/main_simple.rs"

[[bin]]
name = "kipko-ui"
path = "src/main.rs"

[dependencies]
# Core workspace dependencies
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["js"] }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# UI dependencies
dioxus = { workspace = true, features = ["web"] }

# Web server dependencies (only for native builds, not WASM)
axum = { workspace = true, optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

# Internal dependencies
kipko-core = { path = "../kipko-core", default-features = false, features = [] }

# WebAssembly dependencies
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }
js-sys = "0.3"
# Force ahash to use older version compatible with getrandom 0.2
ahash = { version = "=0.8.7", default-features = false, features = ["runtime-rng"] }

# QR code generation
qrcode = "0.14"
base64 = "0.21"

[features]
default = []
server = ["axum", "tokio", "tower", "tower-http"]
